[package]
name = "rocket-diesel-shenanigans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="=0.5.0-rc.3", features = ["json"] }
serde_json = "1.0.104"
serde = "1.0.178"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
